# nlip-preview

./: .gitignore  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
.run/: async hot reload.run.xml  composeApp [desktop].run.xml  composeApp [wasmJs].run.xml  desktop.run.xml  hot reload.run.xml  server.run.xml  server_Dockerfile.run.xml  web.run.xml
codegen/: build.gradle.kts
codegen-runtime/: build.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/wasmJsMain/resources/: index.html
composeApp/webpack.config.d/: allowed-hosts.js
examples/taxiBackend/: Dockerfile  README.md  gen_models.sh  nlip-api.yaml  pyproject.toml  requirements.txt  taxi-openapi.json
examples/taxiBackend/app/: crud.py  database.py  main.py  models.py  nlip_adapter.py  ollama_client.py  schemas.py  sys_prompt.txt
examples/taxiBackend/app/static/: dashboard.css  dashboard.js
examples/taxiBackend/app/templates/: dashboard.html
examples/taxiBackend/tests/: test_trip_flow.py
gradle/: libs.versions.toml
gradle-plugin/: build.gradle.kts
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
jvm-gradle/: build.gradle.kts
kmp-gradle/: build.gradle.kts
model-ksp-annotations/: build.gradle.kts
model-ksp-processor/: build.gradle.kts
nlipAdapter/: build.gradle.kts
server/: Dockerfile  build.gradle.kts
server/src/main/resources/: application.conf  index.html
server/src/test/resources/: logback-test.xml
shared/: build.gradle.kts
(+210 files in other folders)
