[project]
name = "availe"
version = "0.1.0"
description = ""
authors = [
    {name = "availe",email = "94802525+availe@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
