[tool.poetry]
name = "tiny-taxi-backend"
version = "0.1.0"
description = "Tiny Taxi control-tower backend"
authors = ["availe <availe@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.12"
uvicorn = { extras = ["standard"], version = "0.34.2" }
SQLAlchemy = "2.0.41"
pydantic = "2.11.4"
jinja2 = "3.1.6"
requests = "2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
httpx = "0.27.0"
python-multipart = "0.0.20"
datamodel-code-generator = { extras = ["http"], version = "0.30.1" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"